--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Green Earth</title>
-    <link rel="shortcut icon" href="./assets/fav-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/fav-icon.png" type="image/x-icon" />
     <!-- Google Fonts Initialized -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -20,11 +20,69 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Custom CSS Links -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
-<body>
-    <h1 class="text-8xl">Green Earth is cooking.... 🍽</h1>
+<body class="font-['Inter'] bg-[#CFF0DC]">
+    <!-- Navigation Section Start Here -->
+    <nav class="bg-[#15803D] shadow-sm fixed top-0 w-full z-10">
+        <div class="w-11/12 mx-auto navbar">
+            <div class="navbar-start space-x-4 lg:space-x-0">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                        <li><a href="">About</a></li>
+                        <li><a href="">Gallery</a></li>
+                        <li><a href="">Plant a Tree</a></li>
+                    </ul>
+                    </ul>
+                </div>
+                <a href="#" class="text-md md:text-xl font-bold text-white">🌴 Green Earth</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 text-white">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Plant a Tree</a></li>
+                </ul>
+            </div>
+            <div class="navbar-end">
+                <a class="btn bg-[#FACC15] rounded-3xl">Plant a Tree</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Banner Section Start Here -->
+    <section class="banner w-full bg-[#CFF0DC] relative overflow-hidden">
+        <div class="absolute bottom-0 w-full flex justify-between">
+            <div class="hidden md:block">
+                <img src="./assets/hero-leaf1.png" class="w-32 md:w-60 lg:w-80" alt="">
+            </div>
+            <div class="hidden md:block">
+                <img src="./assets/hero-leaf2.png" class="w-32 md:w-60 lg:w-80" alt="">
+            </div>
+        </div>
+        <div class="pt-[120px] pb-[60px] w-11/12 md:w-[45%] text-center mx-auto relative z-10">
+            <h1 class="text-[28px] md:text-[36px] lg:text-[48px] font-bold text-gray-800 leading-snug">
+                Plant a Tree, Grow a Future
+            </h1>
+            <p class="font-normal text-[#1F2937] mt-3 mb-5 max-w-xl mx-auto">
+                Join our mission to plant 1 million trees and make the Earth
+                greener for <span class="lg:block">future generations</span>.
+            </p>
+            <button class="btn bg-[#FACC15] rounded-3xl text-[#15803D] transition-all duration-500 hover:text-black">
+                Plant a Tree
+            </button>
+        </div>
+    </section>
+
 
     <!-- JavaScript -->
     <script src="./script/script.js"></script>
