added about section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
-<body class="font-['Inter'] bg-[#CFF0DC]">
+<body class="font-['Inter'] bg-[#F0FDF4]">
     <!-- Navigation Section Start Here -->
-    <nav class="bg-[#15803D] shadow-sm fixed top-0 w-full z-10">
+    <nav class="bg-[#15803D] shadow-sm fixed top-0 w-full z-20">
         <div class="w-11/12 mx-auto navbar">
             <div class="navbar-start space-x-4 lg:space-x-0">
                 <div class="dropdown">
@@ -83,6 +83,27 @@
         </div>
     </section>
 
+    <!-- About the Campaign Start Here -->
+    <section class="w-11/12 md:w-3/4 my-[100px] mx-auto">
+        <header>
+            <h1 class="text-[32px] font-bold text-center">About the Campaign</h1>
+        </header>
+        <section class="about-container grid grid-cols-12 items-center mt-10 gap-8">
+            <div class="col-span-12 md:col-span-5 shadow-[-9px_16px_9px_-9px_rgba(0,_0,_0,_0.1)] transition-all duration-500 hover:rotate-2">
+                <img src="./assets/about.png" alt="" class="w-full">
+            </div>
+            <div class="col-span-12 md:col-span-7 text-[#1F2937]">
+                <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our
+                    start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                    forests, create habitats for wildlife, and combat global warming.</p>
+                <ul class="list-disc ml-10 mt-5">
+                    <li>Restoration of natural habitats</li>
+                    <li>Improvement of air quality</li>
+                    <li>Support for local communities</li>
+                </ul>
+            </div>
+        </section>
+    </section>
 
     <!-- JavaScript -->
     <script src="./script/script.js"></script>
