--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <h1 class="text-[32px] font-bold text-center">About the Campaign</h1>
         </header>
         <section class="about-container grid grid-cols-12 items-center mt-10 gap-8">
-            <div class="col-span-12 md:col-span-5 shadow-[-9px_16px_9px_-9px_rgba(0,_0,_0,_0.1)] transition-all duration-500 hover:rotate-2">
+            <div
+                class="col-span-12 md:col-span-5 shadow-[-9px_16px_9px_-9px_rgba(0,_0,_0,_0.1)] transition-all duration-500 hover:rotate-2">
                 <img src="./assets/about.png" alt="" class="w-full">
             </div>
             <div class="col-span-12 md:col-span-7 text-[#1F2937]">
@@ -103,6 +104,56 @@
                 </ul>
             </div>
         </section>
+    </section>
+
+    <!-- Our Impact Start Here -->
+    <section class="w-full mx-auto py-[100px] bg-[#CFF0DC]">
+        <header>
+            <h1 class="text-[32px] font-bold text-center">Our Impact</h1>
+        </header>
+        <section class="w-11/12 mx-auto card-section grid grid-cols-1 md:grid-cols-3 gap-10 mt-10">
+            <div
+                class="p-10 bg-white text-center rounded-xl shadow-[-9px_16px_9px_-9px_rgba(0,_0,_0,_0.1)] transition-all duration-500 hover:scale-[0.95]">
+                <h4 class="text-[32px] text-[#15803D] font-semibold">500K+</h4>
+                <p class="text-[#1F2937]">Trees Planted</p>
+            </div>
+            <div
+                class="p-10 bg-white text-center rounded-xl shadow-[-9px_16px_9px_-9px_rgba(0,_0,_0,_0.1)] transition-all duration-500 hover:scale-[0.95]">
+                <h4 class="text-[32px] text-[#15803D] font-semibold">120+</h4>
+                <p class="text-[#1F2937]">Communities Involved</p>
+            </div>
+            <div
+                class="p-10 bg-white text-center rounded-xl shadow-[-9px_16px_9px_-9px_rgba(0,_0,_0,_0.1)] transition-all duration-500 hover:scale-[0.95]">
+                <h4 class="text-[32px] text-[#15803D] font-semibold">30+</h4>
+                <p class="text-[#1F2937]">Countries Reached</p>
+            </div>
+        </section>
+    </section>
+
+    <!-- Plant a Tree Today Start Here -->
+    <section class="w-full bg-[#166534] py-[100px] space-y-10">
+        <header>
+            <h1 class="text-[32px] text-white font-bold text-center">Plant a Tree Today</h1>
+        </header>
+        <form action="" class="w-11/12 md:w-2/5 bg-[#15803D] p-10 mx-auto space-y-3">
+            <input type="text" placeholder="Your Name"
+                class="p-3 w-full bg-white rounded-lg border-none focus:outline-none">
+            <input type="email" placeholder="Your Email Address"
+                class="p-3 w-full bg-white rounded-lg border-none focus:outline-none">
+            <select class="p-3 bg-white rounded-lg border-none focus:outline-none w-full">
+                <option disabled selected>Number of Trees</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+            </select>
+            <input type="submit" value="Donate Now"
+                class="p-3 bg-[#FACC15] transition-all duration-500 hover:bg-[#166534] hover:text-[#FACC15] hover:shadow-[0px_0px_15px_0px_rgba(0,_0,_0,_0.2)] text-[#15803D] font-bold rounded-full border-none focus:outline-none w-full cursor-pointer">
+        </form>
+    </section>
+
+    <!-- Footer Section Start Here -->
+    <section class="w-full bg-[#14532D] p-6 text-center text-white">
+        <p>© 2025 Green Earth. All Rights Reserved.</p>
     </section>
 
     <!-- JavaScript -->
